Delete unnecessary files, delete already removed Steam API key from all references.

--- a/ToolbeltUtilities/appsettings.json
+++ b/ToolbeltUtilities/appsettings.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
   "AppListLocation": "../AppList.txt",
-  "SteamAPIKey": "085DC4B9B856F8AEA1D12421BA87924F"
+  "SteamAPIKey": "REDACTED"
 }
