Moved some project files to more appropriate locations

--- a/ToolbeltUtilities.DataAccess/ToolbeltUtilities.DataAccess.csproj
+++ b/ToolbeltUtilities.DataAccess/ToolbeltUtilities.DataAccess.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ToolbeltUtilities.IDataAccess\ToolbeltUtilities.IDataAccess\ToolbeltUtilities.IDataAccess.csproj" />
+    <ProjectReference Include="..\ToolbeltUtilities.IDataAccess\ToolbeltUtilities.IDataAccess.csproj" />
   </ItemGroup>
 
 </Project>
