--- a/ToolbeltUtilities/ToolbeltUtilities.csproj
+++ b/ToolbeltUtilities/ToolbeltUtilities.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -21,14 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Steam4NET">
-      <HintPath>libs\Steam4NET.dll</HintPath>
-    </Reference>
+    <Folder Include="Configuration\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataAccess\" />
-    <Folder Include="IDataAccess\" />
+    <ProjectReference Include="..\ToolbeltUtilities.Common\ToolbeltUtilities.Common.csproj" />
+    <ProjectReference Include="..\ToolbeltUtilities.DataAccess\ToolbeltUtilities.DataAccess.csproj" />
+    <ProjectReference Include="..\ToolbeltUtilities.IDataAccess\ToolbeltUtilities.IDataAccess.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
