--- a/ToolbeltUtilities.DataAccess/ToolbeltUtilities.DataAccess.csproj
+++ b/ToolbeltUtilities.DataAccess/ToolbeltUtilities.DataAccess.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ToolbeltUtilities.IDataAccess\ToolbeltUtilities.IDataAccess.csproj" />
