--- a/ToolbeltUtilities/appsettings.json
+++ b/ToolbeltUtilities/appsettings.json
@@ -6,7 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SteamAPI": {
+    "OwnedGamesURL": "http://api.steampowered.com/IPlayerService/GetOwnedGames/v0001/",
+    "AppListURL": "https://api.steampowered.com/ISteamApps/GetAppList/v2"
+  },
   "AllowedHosts": "*",
-  "AppListLocation": "../AppList.txt",
-  "SteamAPIKey": "REDACTED"
+  "AppListLocation": "../AppList.txt"
 }
